--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,19 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Inventario</a>
-            <div class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a href="/usuarios/" class="nav-link">Usuarios</a></li>
-                    <li class="nav-item"><a href="/productos/" class="nav-link">Productos</a></li>
+                    <!--<li class="nav-item"><a href="/productos/" class="nav-link">Productos</a></li>-->
                     <li class="nav-item"><a href="/proveedores/" class="nav-link">Proveedores</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item" href="/productos/">Ver productos</a></li>
+                            <li><a class="dropdown-item" href="/productos/marca/">Marcas</a></li>
+                            <li><a class="dropdown-item" href="#">Categorías</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -26,5 +34,8 @@
     <footer class="bg-dark text-white text-center py-2 mt-4">
         Sistema de Inventario &copy; 2025
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
