--- a/productos/templates/productos/producto_detail.html
+++ b/productos/templates/productos/producto_detail.html
@@ -8,11 +8,12 @@
     <p><strong>Precio compra:</strong> ${{ producto.precio_compra }}</p>
     <p><strong>Stock mínimo:</strong> {{ producto.cantidad_minima }}</p>
     <p><strong>Marca:</strong> {{ producto.marca }}</p>
-    <p><strong>Categoría:</strong> {{ producto.categoria }}</p>
     <p><strong>Proveedor:</strong> {{ producto.proveedor }}</p>
+    <!--
     {% if producto.imagen %}
-    <p><img src="{{ producto.imagen.url }}" width="200" alt="Imagen producto"></p>
+    <p><img src="{{ producto.imagen.url }}" width="200" alt="Imagen del producto"></p>
     {% endif %}
+    -->
     <a class="btn btn-secondary" href="{% url 'producto_list' %}">Volver</a>
 </div>
 {% endblock %}
